fixed buttons on redesign

--- a/redesign/redesign.html
+++ b/redesign/redesign.html
@@ -201,12 +201,14 @@
 				<div id="ad_block1" class="col-12 col-sm-12 col-md-6 col-lg-6 justify-content-center text-center">
 					<!-- <img src="../images/adblock1.jpeg" alt="wine glasses in an array"> -->
 					<h2 class="text-light display-3 adtext">Visit Us: Reserve Your Wine Tasting</h2>
-					<a href="reservations" class="btn text-light btn-lg">Reservations</a>
+					<button class="btn btn text-light btn-lg">Reservations</button>
+					<!-- <a href="#" class="btn text-light btn-lg">Reservations</a> -->
 				</div>
 				<div id="ad_block2" class="col-12 col-sm-12 col-md-6 col-lg-6 justify-content-center text-center">
 					<!-- <img src="../images/adblock2.jpg" alt="wine glasses in an array"> -->
 					<h2 class="text-light display-3 adtext">Celebrate. Convene. Entertain.</h2>
-					<a href="contact" class="btn text-light btn-lg">Contact Us</a>
+					<button class="btn btn text-light btn-lg">Contact Us</button>
+					<!-- <a href="#" class="btn text-light btn-lg">Contact Us</a> -->
 				</div>
 			</div>
 		</div>
