bullet points for usability issues

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <div class="container mx-0">
         <div class="row">
             <div class="col-4 position-fixed" id="sidebar">
-                <!-- col-sm-4 col-md-4 col-lg-5 col-xl-6  -->
                 <div class="sidebar_idv">
                     <div class="nav flex-column flex-nowrap vh-100 overflow-auto">
                         <a id="idv" class="nav-link" href="#website">Website</a>
@@ -45,42 +44,8 @@
                 </div>
             </div>
 
-
-    <!-- This container contains the sidebar and main content of the page -->
-    <!-- <div class="container-fluid h-100">
-        <div class="row h-100">
-
-            <div class="col-4 col-xs-2 col-sm-2 col-md-4 col-lg-5" id="sidebar">
-                <div id="sidebar_idv" class="">
-                    <br>
-                    <br>
-                    <br>
-                    <a id="idv" class="link-dark" href="#website">Website</a>
-                    <br>
-                    <br>
-                    <a id="idv" href="#usability">Usability Problems</a>
-                    <br>
-                    <br>
-                    <a id="idv" href="#">Accessibility Problems</a>
-                    <br>
-                    <br>
-                    <a id="idv" href="#">Visual Style Guide</a>
-                    <br>
-                    <br>
-                    <a id="idv" href="#">Three Annotated Wireframes</a>
-                    <br>
-                    <br>
-                    <a id="idv" href="#">Three Annotated Hi-Fi Prototypes</a>
-                    <br>
-                    <br>
-                    <a id="idv" href="#">Responsive Page</a>
-                </div>
-            </div> -->
-
-            <!--Contains the main content
-                    of the webpage-->
+            <!--Contains the main content of the webpage-->
             <div id="main_content" class="col-8 offset-5">
-                <!-- offset-xs-4 offset-sm-4 offset-md-4 offset-lg-5 offset-xl-6 -->
 
                 <div id="website">
                     <h3 id="website">Website</h3>
@@ -95,8 +60,21 @@
 
                 <div id="usability">
                     <h3> Usability Problems</h3>
+                    <h5>Responsiveness</h5>
                     <p>
-                        In terms of simplicity, the original website had multiple fonts and colors that added to user confusion. For instance, the logo had two different fonts with two different styles. Moreover, the website did not have good guidance and information architecture. The tabs for 'Home', 'Tastings', etc. are located in the upper middle part of the page and not right at the top as users would expect. The contact information is tiny and easy to miss at the bottom. Furthermore, the website lacks credibility as it does not mention the legal age limit to consume alcohol. More importantly, the page is not responsive to website resizing and the texts do not wrap around to accommodate this change.
+                        The page is not responsive to website resizing and the texts do not wrap around to accommodate this change.
+                    </p>
+                    <h5>Simplicity</h5>
+                    <p>
+                        In terms of simplicity, the original website had multiple fonts and colors that added to user confusion. For instance, the logo had two different fonts with two different styles.
+                    </p>
+                    <h5>Guidance & Information Architecture</h5>
+                    <p>
+                        The website did not have good guidance and information architecture. The tabs for 'Home', 'Tastings', etc. are located in the upper middle part of the page and not right at the top as users would expect. The contact information is tiny and easy to miss at the bottom.
+                    </p>
+                    <h5>Credibility</h5>
+                    <p>
+                        The website lacks credibility as it does not mention the legal age limit to consume alcohol.
                     </p>
                 </div>
 
@@ -136,9 +114,6 @@
                     <h3>The Responsive Redesigned Page</h3>
                     <a href="./redesign/redesign.html">Responsive Page</a>
                 </div>
-                
-
-
 
             </div>
         </div>
